  are such common functions.
- Re-wrote the example to test and demonstrate more functionality.

Changes in version 1.2.1
- Fixed a bug where comments couldn't be inside elements.
- Loading now clears out existing XML rather than appending.
- Added the "Clear" method on a node to delete all its children.

Changes in version 1.2.2
- Fixed TiXmlAttribute::Previous actually returning "next." Thanks
  to Rickard Troedsson for the bug fix.

Changes in version 1.2.3
- Added the TIXML prefix to the error strings to resolve conflicts
  with #defines in OS headers. Thanks to Steve Lhomme.
- Fixed a delete buf that should be a delete [] buf. 
  Thanks to Ephi Sinowitz.

Changes in version 1.2.4
- ReplaceChild() was almost guarenteed to fail. Should be fixed,
  thanks to Joe Smith. Joe also pointed out that the Print() functions
  should take stream references: I agree, and would like to overload
  the Print() method to take either format, but I don't want to do 
  this in a dot release.
- Some compilers seem to need an extra <ctype.h> include. Thanks
  to Steve Lhomme for that.

Changes in version 2.0.0 BETA
- Made the ToXXX() casts safe if 'this' is null. 
  When "LoadFile" is called with a filename, the value will correctly get set.
  Thanks to Brian Yoder.
- Fixed bug where isalpha() and isalnum() would get called with a negative value for 
  high ascii numbers. Thanks to Alesky Aksenov.
- Fixed some errors codes that were not getting set.
- Made methods "const" that were not.
- Added a switch to enable or disable the ignoring of white space. ( TiXmlDocument::SetIgnoreWhiteSpace() )
- Greater standardization and code re-use in the parser.
- Added a stream out operator.
- Added a stream in operator.
- Entity support, of predefined entites. &#x entities are untouched by input or output.
- Improved text out formatting.
- Fixed ReplaceChild bug, thanks to Tao Chen.

Changes in version 2.0.1
- Fixed hanging on loading a 0 length file. Thanks to Jeff Scozzafava.